Updated briefer templates
- Added an ingress TLS spec
- Updated README generator script
- Updated briefer helm package
- Updated repo index

--- a/briefer/templates/api-ingress.yaml
+++ b/briefer/templates/api-ingress.yaml
@@ -17,16 +17,11 @@ spec:
 {{- with .Values.api.ingress.ingressClassName }}
   ingressClassName: {{ . }}
 {{- end }}
-{{- if .Values.api.ingress.tls }}
   tls:
-  {{- range .Values.api.ingress.tls }}
     - hosts:
-      {{- range .hosts }}
+      {{- range .Values.api.ingress.hosts }}
         - {{ tpl . $ | quote }}
       {{- end }}
-      secretName: {{ .secretName }}
-  {{- end }}
-{{- end }}
   rules:
   {{- range .Values.api.ingress.hosts }}
     - host: {{ tpl . $ | quote }}
@@ -40,4 +35,3 @@ spec:
                 port:
                   name: briefer-api
   {{- end }}
-{{- end }}
