--- a/briefer/templates/web-ingress.yaml
+++ b/briefer/templates/web-ingress.yaml
@@ -17,16 +17,11 @@ spec:
 {{- with .Values.web.ingress.ingressClassName }}
   ingressClassName: {{ . }}
 {{- end }}
-{{- if .Values.web.ingress.tls }}
   tls:
-  {{- range .Values.web.ingress.tls }}
     - hosts:
-      {{- range .hosts }}
+      {{- range .Values.web.ingress.hosts }}
         - {{ tpl . $ | quote }}
       {{- end }}
-      secretName: {{ .secretName }}
-  {{- end }}
-{{- end }}
   rules:
   {{- range .Values.web.ingress.hosts }}
     - host: {{ tpl . $ | quote }}
@@ -40,4 +35,3 @@ spec:
                 port:
                   name: briefer-web
   {{- end }}
-{{- end }}
